--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "type-check": "tsc --noEmit",
         "type-check:watch": "npm run type-check -- --watch",
         "start:dev": "webpack-dev-server --mode development --open",
-        "build": "rimraf dist && webpack --mode development"
+        "build:dev": "rimraf dist && webpack --mode development",
+        "build": "rimraf dist && webpack --mode production"
     },
     "author": "",
     "license": "ISC",
